GUI-2205: Fix label/field alignment on detail pages

--- a/eucaconsole/static/sass/eucaconsole.scss
+++ b/eucaconsole/static/sass/eucaconsole.scss
@@ -906,7 +906,6 @@ form {
 
 form .controls-wrapper > [class*='small-'] label {
     font-weight: bold;
-    padding-top: 0.3rem;
     &.right {
         position: relative;
         right: -1rem;
